--- a/Develop/index.html
+++ b/Develop/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <h1>Hori<strong class="seo">seo</strong>n</h1>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -20,7 +20,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
     <div class="hero"></div>
     <main class="content">
@@ -73,6 +73,7 @@
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
+            <!-- Todo: Review; &copy is a HTML entity for the copyright character -->
         </p>
     </footer>
 </body>
