--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Hori<strong class="seo">seo</strong>n</h1>
-        <nav>
+        <nav role="navigation">
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
