--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Hori<strong class="seo">seo</strong>n</h1>
-        <nav role="navigation">
+        <nav role="navigation" aria-label="Main Menu" tabindex="0">
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,21 +24,21 @@
     </header>
     <div class="hero"></div>
     <main class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization" tabindex="1">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div id="online-reputation-management" class="online-reputation-management" tabindex="2">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Online Reputation Management" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div id="social-media-marketing" class="social-media-marketing" tabindex="3">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Marketing" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -47,21 +47,21 @@
         </div>
     </main>
     <aside class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit-lead" tabindex="4">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Generate leads" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-brand" tabindex="5">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Promote your brand" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-cost" tabindex="6">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Lower marketing costs"></img>
             <p>
