--- a/Develop/index.html
+++ b/Develop/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Hori<strong class="seo">seo</strong>n</h1>
+        <h1 role="banner">Hori<strong class="seo">seo</strong>n</h1>
         <nav role="navigation" aria-label="Main Menu" tabindex="0">
             <ul>
                 <li>
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <div class="hero"></div>
-    <main class="content">
+    <main class="content" role="main">
         <div id="search-engine-optimization" class="search-engine-optimization" tabindex="1">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization" />
             <h2>Search Engine Optimization</h2>
@@ -69,7 +69,7 @@
             </p>
         </div>
     </aside>
-    <footer>
+    <footer role="contentinfo">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
