--- a/index.html
+++ b/index.html
@@ -26,52 +26,52 @@
     </header>
     <aside class="hero"></aside>
     <main class="content" role="main">
-        <div id="search-engine-optimization" class="search-engine-optimization" tabindex="1">
+        <article id="search-engine-optimization" class="search-engine-optimization" tabindex="1">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization" />
             <h2 class="subtitle">Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your
                 business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management" tabindex="2">
+        </article>
+        <article id="online-reputation-management" class="online-reputation-management" tabindex="2">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Online Reputation Management" />
             <h2 class="subtitle">Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see
                 when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing" tabindex="3">
+        </article>
+        <article id="social-media-marketing" class="social-media-marketing" tabindex="3">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Marketing" />
             <h2 class="subtitle">Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
+        </article>
     </main>
     <aside class="benefits">
-        <div class="benefit-lead" tabindex="4">
-            <h2 class="subtitle">Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" alt="Generate leads" />
-                <p>
-                    Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-                </p>
-        </div>
-        <div class="benefit-brand" tabindex="5">
-            <h2 class="subtitle">Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" alt="Promote your brand" />
-                <p>
-                    Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-                </p>
-        </div>
-        <div class="benefit-cost" tabindex="6">
-            <h2 class="subtitle">Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="Lower marketing costs"></img>
-                <p>
-                    As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-                </p>
-        </div>
+        <figure class="benefit-lead" tabindex="4">
+            <h2 class="subtitle">Lead Generation</h2>
+            <img src="./assets/images/lead-generation.png" alt="Generate leads" />
+            <figcaption>
+                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+            </figcaption>
+        </figure>
+        <figure class="benefit-brand" tabindex="5">
+            <h2 class="subtitle">Brand Awareness</h2>
+            <img src="./assets/images/brand-awareness.png" alt="Promote your brand" />
+            <figcaption>
+                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+            </figcaption>
+        </figure>
+        <figure class="benefit-cost" tabindex="6">
+            <h2 class="subtitle">Cost Management</h2>
+            <img src="./assets/images/cost-management.png" alt="Lower marketing costs" />
+            <figcaption>
+                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+            </figcaption>
+            </div>
     </aside>
     <footer role="contentinfo">
         <h2>Made with ❤️️ by Horiseon</h2>
