Removed dangling div tag

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <figcaption>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </figcaption>
-            </div>
+        </figure>
     </aside>
     <footer role="contentinfo">
         <h2>Made with ❤️️ by Horiseon</h2>
